Updates based on comments

--- a/Support/B - Country Survey Details/THA/LFS/1. Introduction to THA LFS.md
+++ b/Support/B - Country Survey Details/THA/LFS/1. Introduction to THA LFS.md
@@ -123,7 +123,8 @@ The datasets received do not contain ID information. In the GLD project, we have
 
 ### Geographic Information
 
-In 2001, the Thailand LFS changed the area of residence categories to urban and rural. Prior to that, areas of residence are categorized as municipal, non-municipal and sanitary areas. In the GLD harmonization, urban areas are mapped to municipal areas, while rural areas are mapped to non-municipal and sanitary areas.
+In 2001, the Thailand LFS changed the area of residence categories to urban and rural. Prior to that, areas of residence are categorized as municipal, non-municipal and sanitary areas. In the GLD harmonization, urban areas are mapped to municipal areas, while rural areas are mapped to non-municipal and sanitary areas. More details in a [separate document here](https://github.com/worldbank/gld/blob/Thailand_Survey_Details/Support/B%20-%20Country%20Survey%20Details/THA/Geographic%20codes.md)
+
 
 ### Minimum age for education, migration and employment questions
 
@@ -143,19 +144,17 @@ This is to note that there are no harmonized LFS datasets for all quarters of 20
 
 Questions relating to migration were asked only until 2000. Information was available on individual’s previous area and province of residence, and reason for migration. However, the questions were only asked in the first and third rounds of the surveys. 
 
+### Differences in defining unemployment
+
+The Thailand NSO reports unemployment to include individuals that are either seeking work or available for work. In contrast, the GLD defines the unemployed as those who are seeking and available for work. More details in a [separate document here](Labor%20force%20status.md)
+
 ### Employment: Industry Classification
 
-The Thailand LFS follows the ISIC version 1 between 1985 and 2000, and the ISIC version 3 between 2001 and 2010. The LFS began using the Thailand Standard Industrial Classification of All Economic Activities (TSIC) 2009 in the 2011 survey. The NSO published a correspondence table that will allow the conversion of TSIC 2009 codes into ISIC version 3.
+The Thailand LFS follows the ISIC version 1 between 1985 and 2000, and the ISIC version 3 between 2001 and 2010. The LFS began using the Thailand Standard Industrial Classification of All Economic Activities (TSIC) 2009 in the 2011 survey. The NSO published a correspondence table that will allow the conversion of TSIC 2009 codes into ISIC version 3. More details in a [separate document here](Changes%20in%20industry%20and%20occupation.md)
 
 ### Employment: Occupation Classification
 
-The Thailand LFS occupation data followed the coding from the international classification for occupations, i.e., ISCO 1958, ISCO 1988 and ISCO 2008. 
+The Thailand LFS occupation data followed the coding from the international classification for occupations, i.e., ISCO 1958, ISCO 1988 and ISCO 2008. More details in a [separate document here](Changes%20in%20industry%20and%20occupation.md)
 
-## Other Documentation Files
 
-[Geographic codes](https://github.com/worldbank/gld/blob/Thailand_Survey_Details/Support/B%20-%20Country%20Survey%20Details/THA/Geographic%20codes.md)
-
-[Changes in industry and occupation](https://github.com/worldbank/gld/blob/Thailand_Survey_Details/Support/B%20-%20Country%20Survey%20Details/THA/Changes%20in%20industry%20and%20occupation.md)
-
-[Labor force status](https://github.com/worldbank/gld/blob/Thailand_Survey_Details/Support/B%20-%20Country%20Survey%20Details/THA/Labor%20force%20status.md)
 
