--- a/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
+++ b/Support/B - Country Survey Details/COL/GEIH/1. Introduction to GEIH.md
@@ -54,11 +54,12 @@ The data covers national information at the urban and rural levels. It also incl
 
 The data is:
 
-- Monthly representative nationally.
-- Monthly representative for each of the 24 cities and 13 metropolitan areas
-Annually for the departments.
+- Nationaly representative.
+- Monthly representative at the national level.
+- Monthly representative for each of the 24 cities and 13 metropolitan areas of the sample.
+- Annually representative for the sub-regional levels (departments).
 
-However, the survey, as we have it now only covers 24 of the 33 departments (technically 32 plus a capital district).
+However, the survey only covers 24 of the 33 departments(sub-regional levels) (32 plus a Bogotá D.C.).
 
 The missing ones are the Caribbean archipelago of San Andres and 8 provinces in Amazonia and Orinoquia. The survey is still representative nationally as they only represent some 5% of the population.
 
@@ -84,7 +85,7 @@ Source. Dane 2021 [GEIH Documentation](https://microdatos.dane.gov.co/index.php/
 
 ### The impact of the COVID-19 pandemic on data collection
 
-Due to the COVID-19 Pandemic, the Colombian NSO conducted the GEIH through phone surveys for the months of March and July. As a result, the data retrieved contains inconsistencies for those months. In particular,  personal information (such as labour status) was absent from the survey responses for this month. The absence of information happened due to the challenge of surveying during a global pandemic. As such, the user should note these limitations. The harmonization team has done its best to reduce the consequences of the absence of data in those months. The resulting harmonization is robust enough as per our harmonization methodology. Please, refer to the do-file for this year for further information.
+Due to the COVID-19 Pandemic, the Colombian NSO conducted the GEIH 2020 through phone surveys for the months of March through July. As a result, the data retrieved contains inconsistencies for those months. In particular,  personal information (such as labour status) was absent from the survey responses for these months. The harmonization team has done its best to reduce the consequences of the absence of data in those months. The resulting harmonization is robust enough as per our harmonization methodology. Please, refer to the do-file for this year for further information.
 
 ### Absence of ISCO (occupation classification) information
 
