Update 1. Introduction to Pakistan LFS.md

--- a/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
+++ b/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
@@ -1,110 +1,69 @@
-# Introduction to Indonesian labor force survey – Survei Angkatan Kerja Nasional (SAKERNAS)
+# Introduction to Pakistan national Labor Force Survey (LFS)
 
 
-## What is the IDN SAKERNAS?
+## What is the PAK LFS?
 
-The National Labor Force Survey (or Survei Angkatan Kerja Nasional, SAKERNAS) is a household-based sample survey conducted by Badan Pusat Statistik (BPS) – Statistics Indonesia. Starting from 1976, SAKERNAS was implemented firstly as a module of the National Socio-Economic Survey (SUSENAS). It was separated from SUSENAS and conducted quarterly since 1986. 
+The Pakistan Labor Force Survey (LFS) is a household-based sample survey conducted by the Federal Bureau of Statistics of Pakistan (BPS) regularly since 1963. This survey was firstly undertaken on quarterly basis in 2005; and became representative at district urban/rural level in 2020. 
 
 
-## What does the IDN SAKERNAS cover?
+## What does the PAK LFS cover?
 
-The IDN SAKERNAS mainly covers information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. In recent years (i.e., 2016-2019), SAKERNAS has become more detailed and covers individuals' health conditions and social security status. Years used for harmonization are from 1989 to 2019 except that 1995 was dropped as SAKERNAS was not conducted in that year. We did not harmonize 1995 although Intercensal Population Survey 1995 can be used as a substitute for it. 
+The PAK LFS mainly covers details information on demographic details, including age, sex, marital status, and location, education, and labour market activities over the previous 7 days. Since 1999, LFS began to include information on households' immigration status, such as whether a given household has migrated or not. Years used for harmonization range from 1992 to 2020 discontinuously, 15 years in total. 
 
-Since 2005, each year has two rounds available for harmonization, Feburary round and August round. We used the one with the larger sample size, which would usually be the August round. Only 2005 has a larger sample size in its Feburary round. There are apparent growths in number and dimension of the variables included in each year's survey over years.
-
-Years and sample size of SAKERNAS harmonized for GLD are: 
+Years and sample size of LFS harmonized for GLD are: 
 
 | **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	|
 | :------:	| :-------:		| :-------:	 	| :-------:	 	|
-| 1989  | N/A        | 283,278        |  264,569,316     |
-| 1990  | 81,814        | 291,095        |  135,714,449     |
-| 1991  | 81,595       | 282,542        |  137,310,249     |
-| 1992  | 72,756        | 282,542        |  140,774,459     |
-| 1993  | 81,618        | 279,784        |  143,792,299     |
-| 1994  | 72,457        | 245,207        |  147,807,154     |
-| 1996  | 73,629        | 247,190        |  154,460,720     |
-| 1997  | 65,648        | 219,439        |  157,393,266     |
-| 1998  | 49,150        | 163,515        |  160,315,818     |
-| 1999  | 47,580        | 155,572        |  162,039,307     |
-| 2000  | 31,439        |  98,952        |  161,369,415     |
-| 2001  | 38,052        | 119,935        |  164,896,728     |
-| 2002  | 70,176        | 275,342        |  212,540,647     |
-| 2003  | 76,085        | 232,466        |  170,856,677     |
-| 2004  | 75,557        | 209,480        |  153,948,922     |
-| 2005  | 68,645        | 215,775        |  177,423,583     |
-| 2006  | 70,836        | 193,696        |  160,811,498     |
-| 2007  | 286,048        | 910,277        |  184,782,929     |
-| 2008  | 291,656        | 931,890        |  187,553,465     |
-| 2009  | N/A        | 926,538        |  189,989,229     |
-| 2010  | N/A        | 930,436        |  189,155,010     |
-| 2011  | N/A        | 524,810        |  164,914,010     |
-| 2012  | N/A        | 489,146        |  166,540,943     |
-| 2013  | N/A        | 476,783        |  169,068,867     |
-| 2014  | N/A        | 471,525        |  174,924,561     |
-| 2015  | N/A        | 522,131        |  184,898,265     |
-| 2016  | N/A        | 131,152        |  189,096,722     |
-| 2017  | N/A        | 536,809        |  192,010,262     |
-| 2018  | N/A        | 508,460        |  194,779,441     |
-| 2019  | N/A        | 782,789        |  197,911,777     |
-
-Note that even though SAKERNAS is a household-based survey and it indeed has household-related variables in some years, not every year's raw dataset provides complete location identification information for unique household ID generation. In those years, the methodology does also not allow for the creation of household level estimates. Therefore, numbers of household are not available (N/A) in the table above for those years without household IDs.
+| 1992  | 20,118        | 129,109      |  85,910,233  |
+| 1999  | 17,444        | 111,473      |  103,897,454 |
+| 2001  | 18,889        | 122,233      |  116,718,126 |
+| 2003  | 20,440        | 139,123      |  131,548,813 |
+| 2005  | 32,638        | 219,969      |  130,728,041 |
+| 2007  | 36,069        | 250,820      |  133,749,747 |
+| 2008  | 36,253        | 249,216      |  134,247,447 |
+| 2009  | xxxxxx        | xxxxxxx      |  xxxxxxxxxxx |
+| 2010  | 38,818        | 260,894      |  178,987,341 |
+| 2012  | 27,551        | 182,541      |  134,813,093 |
+| 2013  | 35,067        | 228,224      |  181,714,956 |
+| 2014  | 41,627        | 264,136      |  189,190,000 |
+| 2017  | 43,248        | 272,490      |  185,760,595 |
+| 2018  | 40,963        | 257,054      |  203,261,919 |
+| 2020  | 96,440        | 570,991      |  207,976,697 |
 
 
 ## Where can the data be found?
 
-The microdata of SAKERNAS are not publicly available. The raw data we used were acquired by filling in a data request form and then shared by the World Bank Indonesia Team. Data can also be purchased from the BPS' Statistics Service Information System ([link here](https://silastik.bps.go.id/v3/index.php/site/login/) - requires login)
-
+The microdata of LFS are publicly available on the official website of PBS through this [link](https://www.pbs.gov.pk/content/lfs-2010-2018-microdata). And accordingly, each year's report of 2007 to 2020 can be found through the [link here](https://www.pbs.gov.pk/content/all-reports-and-publications). 
 
 
 ## What is the sampling procedure?
 
-SAKERNAS uses a two-stage cluster sampling method in general, which includes two steps: 1) selecting the main sampling unit – census blocks and 2) selecting the ultimate sampling unit – households within each main sampling unit. As the frequency of data collection and level of data representativeness have changed over time, the implementation of sample selection methods also changed. For example, year 2007 is a dividing line in that all years before 2007 can only produce representative estimates up to province level whereas all years after 2007 (including 2007) have representativeness at district level except for the August round of 2016. The exception of year 2016 is because of the reduction on its sample size, which was reduced from 200,000 households to 50,000 households. The knowledge product, *A Guide to Working with Indonesian Survey Data* (
-hereinafter referred to as *The Guide*),  written by the Poverty Global Practice of the World Bank Group outlines the sampling procedure as:
+LFS uses a two-stage cluster sampling method in general, which includes two steps: 1) selecting the primary sampling units (PSU), which are enumeration blocks in both urban and rural domains 2) selecting the secondary sampling units, which include listed households of sample PSUs. The first year of the GLD, 1992, is only nationally representative at urban/rural level; the last year of harmonization, 2020, is the only year that has district level of representativeness; and all years in between are representative at the rural/urban level of the province. 
+
+More details of the sampling frame & procedure are included in each year's annual report. Here is an example of LFS 2020:
    
 ```
-Probability Proportional to Size method (PPS) is used when selecting census block from Master Sampling Frame (MSF) which contains the list of primary sampling units (PSU or wilcah/wilayah pencacahan). Sampling frame for the annual Sakernas was
-developed using the results of population census conducted previously before the respective Sakernas was conducted, while sampling frame for the quarterly Sakernas was obtained from the sampling frame of Susenas. For example, sampling frame for Sakernas 2003 was derived from the results of 2000 Population Census (SP2000), while sampling frame used in Sakernas 2011 was coming from Susenas 2011 sampling frame.
+**Universe**: The universe for Labour Force Survey consists of all urban and rural areas of the four provinces of Pakistan and Islamabad excluding military restricted areas. The population of excluded areas constitutes about 1% of the total population.
 
-After census blocks were selected, a systematical random sampling method is then used to select households
-within census block (16 households per census block before 2011 and 10 households per census block since 2011). To
-describe more clearly about how the sampling is done in Sakernas, this chapter covers two specific examples, i.e. for
-Sakernas 2007 to 2010 and 2011 to 2015.
+A stratified two-stage sample design is adopted for the survey.
 
-In Sakernas 2007 to 2010, the Master Sampling Frame was developed using the results of 2006 Economic
-Census. Sampling procedure was done by district/city and was separated between urban and rural areas. For each
-district/city, there were two stages sampling method as follows:
+Pakistan Bureau of Statistics (PBS) has developed its own sampling frame for both urban and rural domains. Each city/town is divided into enumeration blocks. Each enumeration block is comprised of 200 to 250 households on the average with well-defined boundaries and maps. The frame used in this survey was the most recent frame which is updated through Population and Housing Census 2017.
 
-1.First stage: From the MSF, n(h) census blocks were selected (h=1 for urban and h=0 for rural) using Probability
-Proportional to Size (PPS) method.
+**Rural Domain**: Each administrative district in the Punjab, Sindh and Khyber Pakhtunkhawa (KP) is considered an independent stratum whereas in Balochistan, each administrative division constitutes a stratum.
+Urban Domain: All administrative divisions in the four provinces, constitutes separate stratum.
 
-2.Second stage: From each census block that had been selected in the first stage, 16 households were selected
-using a systematic random sampling method.
+**Selection of primary sampling units (PSUs)**
+Enumeration blocks in both Urban and Rural domains are taken as Primary Sampling Units (PSUs). Sample PSUs from each ultimate stratum/sub-stratum are selected with probability proportional to size (PPS) method of sampling scheme. In both Urban and Rural domains, the number of households in an enumeration blocks considered as measure of size.
 
-In Sakernas 2011 to 2015, the Master Sampling Frame is developed using the results of 2010 Population Census
-(SP2010), which has been updated every time before the survey will take place. Starting from 2011, the period in which
-Sakernas began to be conducted quarterly, household samples are selected using three-stage withdrawal, with the
-following steps:
-
-1.First stage: From the MSF, 30,000 PSUs are selected for Susenas sampling frame by using the method of PPS.
-These 30,000 PSUs are then randomly allocated evenly for each quarter of Susenas, i.e. 7,500 PSU for each
-quarter. From 7,500 PSUs of Susenas Quarter I, 5,000 PSUs were systematically selected to be used for Sakernas
-Quarter I (February), and will be used again for Sakernas Quarters II (May), III (August), and IV (November).
-
-2.Second stage: From each PSU in the 5,000 selected PSUs, two census blocks were selected using PPS method,
-proportional to number of households based on SP2010 results. These selected census blocks were then
-randomly allocated for Susenas and Sakernas (1 census block for Susenas and 1 census block for Sakernas). The
-selected census blocks for Sakernas were utilized for provincial estimates and divided into 4 sample packages,
-each of which consists of 1,250 census blocks.
-
-3.Third stage: From each census block selected in the second stage, 10 households were selected using
-systematic random sampling.
+**Selection of secondary sampling units (SSUs)**
+The listed households of sample PSUs are taken as Secondary Sampling Units (SSUs). A specified number of households i.e. 12 from each urban sample PSU and 16 from rural sample PSU are selected with equal probability using systematic sampling technique with a random start.
 
 ```    
   
   
 ## What is the geographic significance level?
 
-The official reports detail results by gender, sector (i.e. urban or rural), province, and district (or kab). Province is the first administrative level at which data from 1989 to 2006 are representative whereas district is the second level at which data from 2007 to 2019 are representative. Variable `subnatid1_prev1` in the harmonized dataset shows how the provinces change throughout time. More details about historical changes to administrative divisions can be found in this separate [document](Geographic_Significance_Level.md).
+The official reports detailed results by gender, sector (i.e. urban or rural), province. Province is the first administrative level at which data from 1989 to 2006 are representative whereas district is the second level at which data from 2007 to 2019 are representative. Variable `subnatid1_prev1` in the harmonized dataset shows how the provinces change throughout time. More details about historical changes to administrative divisions can be found in this separate [document](Geographic_Significance_Level.md).
 
 
 ## Other noteworthy aspects
