Update 1. Introduction to SAKERNAS.md

--- a/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
+++ b/Support/B - Country Survey Details/IDN/SAKERNAS/1. Introduction to SAKERNAS.md
@@ -47,7 +47,7 @@ Years and sample size of SAKERNAS harmonized for GLD are:
 | 2018  | N/A        | 508,460        |  194,779,441     |
 | 2019  | N/A        | 782,789        |  197,911,777     |
 
-Note that even though SAKERNAS is a household-based survey and it indeed has household-related variables in some years, not every year's raw dataset provides complete location identification information for unique household ID generation. In those years, the methodology does also not allow for the creation of household level estimates. Therefore, numbers of household are not available (N/A) in the table above for those years without household IDs.
+Note that even though SAKERNAS is a household-based survey and it indeed has household-related variables in some years, not every year's raw dataset provides complete location identification information for unique household ID generation. In those years, the methodology also does not allow for the creation of household level estimates. Therefore, numbers of household are not available (N/A) in the table above for those years without household IDs.
 
 
 ## Where can the data be found?
@@ -104,7 +104,7 @@ systematic random sampling.
   
 ## What is the geographic significance level?
 
-The official reports detail results by gender, sector (i.e. urban or rural), province, and district (or kab). Province is the first administrative level at which data from 1989 to 2006 are representative whereas district is the second level at which data from 2007 to 2019 are representative. Variable `subnatid1_prev1` in the harmonized dataset shows how the provinces change throughout time. More details about historical changes to administrative divisions can be found in this separate [document](Geographic_Significance_Level.md).
+The official reports detailed results by gender, sector (i.e. urban or rural), province, and district (or kab). Province is the first administrative level at which data from 1989 to 2006 are representative whereas district is the second level at which data from 2007 to 2019 are representative. Variable `subnatid1_prev1` in the harmonized dataset shows how the provinces change throughout time. More details about historical changes to administrative divisions can be found in this separate [document](Geographic_Significance_Level.md).
 
 
 ## Other noteworthy aspects
