Update 1. Introduction to Pakistan LFS.md

--- a/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
+++ b/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
@@ -63,29 +63,28 @@ The listed households of sample PSUs are taken as Secondary Sampling Units (SSUs
   
 ## What is the geographic significance level?
 
-The official reports detailed results by gender, sector (i.e. urban or rural), province. Province is the first administrative level at which data from 1989 to 2006 are representative whereas district is the second level at which data from 2007 to 2019 are representative. Variable `subnatid1_prev1` in the harmonized dataset shows how the provinces change throughout time. More details about historical changes to administrative divisions can be found in this separate [document](Geographic_Significance_Level.md).
+The official reports detailed results by gender, sector (i.e. urban or rural), and the four main provinces in Pakistan – Punjab, Sindh, the North-West Frontier Province(N.W.F.P.), and Balochistan. In the raw datasets of all LFS, 2010, 2014, 2017, and 2018 are the only four years that contain more than the four main provinces. The table below shows provinces included in each year and the geographic significance level.
+
+| **Year**	| **Province Covered**	| **Historical Change**	| 
+| :------:	| :-------------------: | :-------------------:	| 
+| 1992  | Punjab/Sindh/NWFP/Balochistan | N/A |  
+| 1999  | Punjab/Sindh/NWFP/Balochistan | N/A |  
+| 2001  | Punjab/Sindh/NWFP/Balochistan | N/A | 
+| 2003  | Punjab/Sindh/NWFP/Balochistan | N/A | 
+| 2005  | Punjab/Sindh/NWFP/Balochistan | N/A | 
+| 2007  | Punjab/Sindh/NWFP/Balochistan | N/A |
+| 2008  | Punjab/Sindh/NWFP/Balochistan | N/A |  
+| 2009  | xxxxxxxxxxxxxxxxxxxxxxxxxxxxx | N/A |  
+| 2010  | Punjab/Sindh/KP/Balochistan/AK,Kashmir/GB | The name of NWFP changed to Khyber Pakhtunkhwa (or K/P province)|  
+| 2012  | Punjab/Sindh/NWFP/Balochistan | N/A |  
+| 2013  | Punjab/Sindh/NWFP/Balochistan | N/A | 
+| 2014  | Punjab/Sindh/KP/Balochistan/Islamabad| N/A | 
+| 2017  | Punjab/Sindh/KP/Balochistan/Islamabad| N/A | 
+| 2018  | Punjab/Sindh/KP/Balochistan/Islamabad| Federally Administered Tribal Areas, or "FATA" was merged into K/P| 
+| 2020  | Punjab/Sindh/KP/Balochistan   | N/A |  
 
 
 ## Other noteworthy aspects
-
-
-### Unique Household ID Generation
-
-Household IDs are not directly available in SAKERNAS regardless of year. Location identifiers such as province, district, sector (urban or rural) etc. can be used to generate household IDs. However, these location identifiers are not necessarily fully available in all survey years. We created household IDs using STATA codes provided by the *The Guide* for years that have the full list of location identifiers required.
-
-![STATA_HHID_codes](https://user-images.githubusercontent.com/84488698/163726938-8dfafff8-f195-442f-bef7-6f3a9f9843f9.png)
-
-Household IDs were only created if 1) the given year has the full list of identifiers and 2) the number of households generated using this method matches the household sample size in *The Guide*. Because *The Guide* only provides a range of household sample size for several years in rounded number, it is possible that our self-created household number is not equal to the exact number of household in a specific year. The table below shows the availability of location identifiers in each year and if they have household ID.  
-
-| **Year**	    | **Location Identifiers Available**	| **HHID created?** | 
-| :-------:	 | :------------------------------: | :-----------: | 
-| 1989       | province, district, sector, sample code number, household sample sequential number, serial number of households| No | 
-| 1990-1994  | province, district, sector, sample code number, household sample sequential number, serial number of households| Yes|  
-| 1996-2001  | province, district, sub-district, village, sector, sample code number, household sample sequential number| Yes |  
-| 2002       | province, district, sector, sample code number, household sample sequential number | Yes|  
-| 2003-2008  | province, district, sub-district, village, sector, sample code number, household sample sequential number| Yes |  
-| 2009       | province, district, sector, household sample sequential number|No| 
-| 2010-2019  | province, district, sector| No| 
 
 
 ### Definition of Labor Status and Labor Force Participation
