--- a/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
+++ b/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
@@ -89,17 +89,11 @@ The official reports detailed results by gender, sector (i.e. urban or rural), a
 
 ### Definition of Labor Status and Labor Force Participation
 
-From 1989 to 2019, the structure of SAKERNAS, especially the labor force module has changed greatly. Not only does the number of labor-related questions increase, but also the logic as well as the order of questions change. Although our definition of the GLD variable `lstatus` and `potential_lf` never change, still, we needed to find the most appropriate question or a set of questions in the suvey to define the two variables, which sometimes requires slight adaptation. In order to make sure that we understood the intention and the logic of the questions and made adaptations correctly, we used labor force participation rate in the report from [International Labour Organization (ILO) microdata library](https://www.ilo.org/surveyLib/index.php/catalog) ([here](utilities/IDN_2015_LFS_AUG_Report.pdf) is an example of 2015) as a benchmark for years with adaptations. But only 2014-2017 has detailed employed population, unemployed population and non-labor force data from ILO. We also used [World Bank country indicators](https://data.worldbank.org/indicator/SL.TLF.CACT.ZS?end=2020&locations=ID&start=2000) as a general reference. Here are some brief explanations. A more comprehensive explanation of the harmonization choices [is covered here in a separate document](Labor_Status_and_Labor_Force_Participation.md).    
+LFS has its own conception and definition documentation for variables. These documents can be found on the International Labour Organization data catalog [website](https://www.ilo.org/surveyLib/index.php/catalog/?page=1&from=2000&to=2020&ps=15). When coding GLD variable `lstatus` and `potential_lf`, we need to adapt GLD definition for *being employed* and *unemployed* to fit LFS's own definition, and more often, this requires us to narrow LFS's definition down and expand GLD definition so that they produce an overlapping area for us to code related variables. 
 
-All the harmonized years can be grouped into three categories: 
+Earlier years like 1991 and 1999 are coded slightly differently from other years as they have less labor questions. A more comprehensive explanation of the harmonization choices [is covered here in a separate document](Labor_Status_and_Labor_Force_Participation.md).    
 
-1) 1989-1999: the questionnaires of these years follow the same structure and have the same labor force module questions. Simply following the order of the questions can locate all the conditions needed to decide the employed, the unemployed, and non-labor force population. 
-2) 2000-2016：the labor force module has become more complete (and complex). Questions are more well-guided during this time period. The *Only for Working Household Members* block states clearly the requirements for people to answer this block, which is a clear clue to code employed people.
-3) 2017-2019: the last three years have the most up-to-date questionnaire structure, which adds details like work environment and welfare. Yet, while the block on employment status question increases and expands, the previous order was discarded and guide becomes blurred. Following the logic of the questionnaire would not produce sound labor force participation rate. We slightly changed the way we coded `lstatus` so as to get close to the ILO estimates.
-
-Finally, it is worth pointing out that the age required for education and labor force modules changed between 2016 and 2017: 10 years old for years 1989-2016 whereas it is 5 for 2017-2019.        
-
-
+        
 ### Coding of industry and occupation codes
 
 Regarding industrial classification, 5 versions of Indonesian Standard Industrial Classification (KBLI) were involved from 1989 to 2019 – KLUI1997, KBLI2000, KBLI2005, KBLI2009, and KBLI2015. They were based on different versions of ISIC and were used in different years of SAKERNAS. in the [separate document.](Correspondence_National_International_Classifications.md) 
