Update 1. Introduction to Pakistan LFS.md

--- a/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
+++ b/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
@@ -96,8 +96,8 @@ Earlier years like 1991 and 1999 are coded slightly differently from other years
         
 ### Coding of industry and occupation codes
 
-Regarding industrial classification, 5 versions of Indonesian Standard Industrial Classification (KBLI) were involved from 1989 to 2019 – KLUI1997, KBLI2000, KBLI2005, KBLI2009, and KBLI2015. They were based on different versions of ISIC and were used in different years of SAKERNAS. in the [separate document.](Correspondence_National_International_Classifications.md) 
+ Regarding industrial classification, 3 versions of Pakistani Standard Industrial Classification (PSIC) were involved from 1992 to 2020 – PSIC 1970, 2007, 2010. They are based on different versions of ISIC and were used in different years of LFS. in the [separate document.](Correspondence_National_International_Classifications.md) 
 
-Although four versions of Indonesian Standard Occupational Codes (KBJI) were involved – KBJI1982, KBJI2000, KBJI2002, KBJI2014, we only used KBJI1982 and KBJI2002 during our mappiong process. Some years of SAKERNAS provide three versions of KBJI in the raw datasets yet with differet degrees of specifications. For example, SAKERNAS 2011 has KBJI 1982 three digits, 2000 1 digit and 2002 1 digit. But KBJI1982 three digits is the version we used most since it carries more information on occupation. 
+Although three versions of Pakistani Standard Occupational Codes (PSCO) were involved – PSCO 1994, 2011, and 2015, they are based on two versions of internation standards which are ISCO 1988 AND 2008. PSCO 1994 follows ISCO 1988 whereas PSCO 2011 and 2015 follow ISCO 2008. 
 
-Details about industrial and occuaptional mappings are covered in this [separate document.](Correspondence_National_International_Classifications.md) 
+In general, each single version of national standards, regardless of industry or occupation, is almost identical to their international counterpart at two-digit level. Details about industrial and occuaptional mappings are covered in this [separate document.](Correspondence_National_International_Classifications.md) 
