Update 1. Introduction to Pakistan LFS.md

--- a/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
+++ b/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
@@ -63,7 +63,7 @@ The listed households of sample PSUs are taken as Secondary Sampling Units (SSUs
   
 ## What is the geographic significance level?
 
-The official reports detailed results by gender, sector (i.e. urban or rural), and the four main provinces in Pakistan – Punjab, Sindh, the North-West Frontier Province(N.W.F.P.), and Balochistan. In the raw datasets of all LFS, 2010, 2014, 2017, and 2018 are the only four years that contain more than the four main provinces. The table below shows provinces included in each year and the geographic significance level.
+The official reports detailed results by gender, sector (i.e. urban or rural), and the four main provinces in Pakistan – Punjab, Sindh, the North-West Frontier Province(N.W.F.P.), and Balochistan. In the raw datasets of all LFSs, 2010, 2014, 2017, and 2018 are the only four years that contain more than the four main provinces. The table below shows provinces included in each year and the geographic significance level.
 
 | **Year**	| **Province Covered**	| **Historical Change**	| 
 | :------:	| :-------------------: | :-------------------:	| 
