Amendment to Luxor additon
Amended the wording as the city of Luxor is inside Luxor governorate but the latter is much bigger, contains both urban and rural places.

--- a/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
+++ b/Support/B - Country Survey Details/EGY/LFS/1. Introduction to LFS.md
@@ -83,5 +83,5 @@ In the years 2008, 2 new governorates (Helwan and 6th of Ocotber) where created 
 
 Sources: [Helwan](https://en.wikipedia.org/wiki/Helwan_Governorate) & [6th of October](https://en.wikipedia.org/wiki/6th_of_October_Governorate#:~:text=The%206th%20of%20October%20Governorate%20was%20split%20from%20the%20Giza,Egypt's%20most%20densely%20populated%20governorates.)
 
-The Luxor governorate has always been an individual entity (city between 2006-2008 and governorate from 2009). As a result, the CAPMAS considers Luxor as part of the list of governorates in the data. For further information, please contact the Egypt NSO.
+Additionally, even though Luxor governorate only became an independent governorate in 2009 (splitting from Qena governorate), CAPMAS (Central Agency for Public Mobilization and Statistics) already considered it an independent governorate in its survey. Thus the note that the data contains Luxor as an independent unit (own category in `subnatid1`) since 2006. For further information, please contact the Egypt NSO.
 
