Update 1. Introduction to KCHSP.md

--- a/Support/B - Country Survey Details/KEN/KCHSP/1. Introduction to KCHSP.md
+++ b/Support/B - Country Survey Details/KEN/KCHSP/1. Introduction to KCHSP.md
@@ -10,31 +10,29 @@
 
 ## What is the KEN KCHSP?
 
+Kenya National Bureau of Statistics (KNBS) developed the Kenya Continuous Household Survey Programme (KCHSP) to address existing data gaps from other surveys. KCHSP provides quarterly data on socio-economic indicators. The key modules in this programme (KCHSP) are; the quarterly labour force and the quarterly household budget which will provide data on employment and household consumption, respectively.
+
 ## What does the KEN KCHSP cover?
+
+The survey covers all the counties in Kenya based on the following levels: National, Urban, Rural and County.
 
 | Year	| # of Households	| # of Individuals	|
 | :-------	| :--------		| :--------	 	|
-| 1987	| 129,060		| 667,804		|
-| …	| …			| …			|
-| 2011	| 101,724		| 456,999		|
+| 2019	| 	20,691	| 86,647	|
+| 2020	| 	24,638	| 89,613	|
 
 ## Where can the data be found?
 
+Once data cleaning and analysis is completed, both the Micro data and the survey reports are archived and disseminated through KNBS website for public use. However, in case the website is not available microdata can be found in the following [website](https://statistics.knbs.or.ke/nada/index.php/home)
 
 ## What is the sampling procedure?
-
+n/a
 
 ## What is the geographic significance level?
-
+n/a
 
 ## Other noteworthy aspects
 
-
-### List items as needed and be brief - if longer, refer to other, explicit documents
-
-
-### ISIC mapping example (MEX)
-
-
-### Other Documentation Files 
+# Data collection
+The KCHSP will use Computer-Assisted Personal Interviewing (CAPI) technique to collect data.  Based on this technique, the respondent or interviewer uses a tablet/ mobile phone to capture  data. 
 
