Update 1. Introduction to KCHSP.md

--- a/Support/B - Country Survey Details/KEN/KCHSP/1. Introduction to KCHSP.md
+++ b/Support/B - Country Survey Details/KEN/KCHSP/1. Introduction to KCHSP.md
@@ -33,6 +33,6 @@ n/a
 
 ## Other noteworthy aspects
 
-# Data collection
+### Data collection
 The KCHSP will use Computer-Assisted Personal Interviewing (CAPI) technique to collect data.  Based on this technique, the respondent or interviewer uses a tablet/ mobile phone to capture  data. 
 
