--- a/Support/B - Country Survey Details/KEN/KCHSP/1. Introduction to KCHSP.md
+++ b/Support/B - Country Survey Details/KEN/KCHSP/1. Introduction to KCHSP.md
@@ -34,5 +34,5 @@ n/a
 ## Other noteworthy aspects
 
 ### Data collection
-The KCHSP will use Computer-Assisted Personal Interviewing (CAPI) technique to collect data.  Based on this technique, the respondent or interviewer uses a tablet/ mobile phone to capture  data. 
+The KCHSP uses Computer-Assisted Personal Interviewing (CAPI) technique to collect data.  Based on this technique, the respondent or interviewer uses a tablet/ mobile phone to capture  data. 
 
