--- a/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
+++ b/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
@@ -12,24 +12,25 @@ The PAK LFS mainly covers details information on demographic details, including 
 
 Years and sample size of LFS harmonized for GLD are: 
 
-| **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	|
-| :------:	| :-------:		| :-------:	 	| :-------:	 	|
-| 1992  | 20,118        | 129,109      |  85,910,233  |
-| 1999  | 17,444        | 111,473      |  103,897,454 |
-| 2001  | 18,889        | 122,233      |  116,718,126 |
-| 2003  | 20,440        | 139,123      |  131,548,813 |
-| 2005  | 32,638        | 219,969      |  130,728,041 |
-| 2007  | 36,069        | 250,820      |  133,749,747 |
-| 2008  | 36,253        | 249,216      |  134,247,447 |
-| 2009  | xxxxxx        | xxxxxxx      |  xxxxxxxxxxx |
-| 2010  | 38,818        | 260,894      |  178,987,341 |
-| 2012  | 27,551        | 182,541      |  134,813,093 |
-| 2013  | 35,067        | 228,224      |  181,714,956 |
-| 2014  | 41,627        | 264,136      |  189,190,000 |
-| 2017  | 43,248        | 272,490      |  185,760,595 |
-| 2018  | 40,963        | 257,054      |  203,261,919 |
-| 2020  | 96,440        | 570,991      |  207,976,697 |
+| **Year**	| **# of Households**	| **# of Individuals**	| **Expanded Population**	| **Officially Reported Sample Size(# HH)**	|
+| :------:	| :-------:		| :-------:	 	| :-------:	 	| :-------:	 	|
+| 1992  | 20,118        | 129,109      |  85,910,233  |   N/A   |
+| 1999  | 17,444        | 111,473      |  103,897,454 |  18,890 |
+| 2001  | 18,889        | 122,233      |  116,718,126 |  18,890 |
+| 2003  | 20,440        | 139,123      |  131,548,813 |  18,912 |
+| 2005  | 32,638        | 219,969      |  130,728,041 |  32,744 |
+| 2007  | 36,069        | 250,820      |  133,749,747 |  36,272 |
+| 2008  | 36,253        | 249,216      |  134,247,447 |  36,400 |
+| 2009  | 38,764        | 263,501      |  139,159,113 |   N/A   |
+| 2010  | 38,818        | 260,894      |  178,987,341 |  36,420 |
+| 2012  | 27,551        | 182,541      |  134,813,093 |  35,067 |
+| 2013  | 35,067        | 228,224      |  181,714,956 |  40,747 |
+| 2014  | 41,627        | 264,136      |  189,190,000 |  36,108 |
+| 2017  | 43,248        | 272,490      |  185,760,595 |  43,472 |
+| 2018  | 40,963        | 257,054      |  203,261,919 |  41,184 |
+| 2020  | 96,440        | 570,991      |  207,976,697 |  99,904 |
 
+1992 and 2009 do not have annual reports publicly available online, therefore, official number of sample size for these two years are missing. Note that the number of households in our harmonized datasets do not equal the number of sample size in each year's annual report. We follow [coding scheme](coding_LFS_2017-18) by the BPS to code household identification variable `hhid`, which produces number of households. 
 
 ## Where can the data be found?
 
