Update 1. Introduction to Pakistan LFS.md

--- a/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
+++ b/Support/B - Country Survey Details/PAK/LFS/1. Introduction to Pakistan LFS.md
@@ -30,7 +30,9 @@ Years and sample size of LFS harmonized for GLD are:
 | 2018  | 40,963        | 257,054      |  203,261,919 |  41,184 |
 | 2020  | 96,440        | 570,991      |  207,976,697 |  99,904 |
 
-1992 and 2009 do not have annual reports publicly available online, therefore, official number of sample size for these two years are missing. Note that the number of households in our harmonized datasets do not equal the number of sample size in each year's annual report. We follow [coding scheme](coding_LFS_2017-18) by the BPS to code household identification variable `hhid`, which produces number of households. 
+1992 and 2009 do not have annual reports publicly available online, therefore, official number of sample size for these two years are missing. 
+
+Note that the number of households in our harmonized datasets do not equal the number of sample size in each year's annual report. We follow [coding scheme](coding_LFS_2017-18) by the BPS to code household identification variable `hhid`, which produces number of households. Though no observation dropped in any year, numbers we got differ from those in the annual reports for unknown reasons. Coding scheme documentation is official guide that provides detailed information on how to use the original variable `PrCode`, process code, to get information on urban/rural status, household number, province, stratum etc. from a certain digit of the variable. The link above to the example of coding scheme of year 2018.  
 
 ## Where can the data be found?
 
@@ -64,7 +66,7 @@ The listed households of sample PSUs are taken as Secondary Sampling Units (SSUs
   
 ## What is the geographic significance level?
 
-The official reports detailed results by gender, sector (i.e. urban or rural), and the four main provinces in Pakistan – Punjab, Sindh, the North-West Frontier Province(N.W.F.P.), and Balochistan. In the raw datasets of all LFSs, 2010, 2014, 2017, and 2018 are the only four years that contain more than the four main provinces. The table below shows provinces included in each year and the geographic significance level.
+The official reports detailed results by gender, sector (i.e. urban or rural), and the four main provinces in Pakistan – Punjab, Sindh, the North-West Frontier Province(N.W.F.P.), and Balochistan. In the raw datasets of all LFSs, 2010, 2014, 2017, and 2018 are the only four years that contain more than the four major provinces. The table below shows provinces included in each year and the geographic significance level.
 
 | **Year**	| **Province Covered**	| **Historical Change**	| 
 | :------:	| :-------------------: | :-------------------:	| 
@@ -75,7 +77,7 @@ The official reports detailed results by gender, sector (i.e. urban or rural), a
 | 2005  | Punjab/Sindh/NWFP/Balochistan | N/A | 
 | 2007  | Punjab/Sindh/NWFP/Balochistan | N/A |
 | 2008  | Punjab/Sindh/NWFP/Balochistan | N/A |  
-| 2009  | xxxxxxxxxxxxxxxxxxxxxxxxxxxxx | N/A |  
+| 2009  | Punjab/Sindh/NWFP/Balochistan | N/A |  
 | 2010  | Punjab/Sindh/KP/Balochistan/AK,Kashmir/GB | The name of NWFP changed to Khyber Pakhtunkhwa (or K/P province)|  
 | 2012  | Punjab/Sindh/NWFP/Balochistan | N/A |  
 | 2013  | Punjab/Sindh/NWFP/Balochistan | N/A | 
